--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack -p 9002",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
-    "build": "NODE_ENV=production next build",
+    "build": "cross-env NODE_ENV=production next build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
@@ -49,7 +49,7 @@
     "genkit": "^1.20.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.475.0",
-    "next": "15.3.3",
+    "next": "^15.5.6",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -65,6 +65,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
+    "cross-env": "^10.1.0",
     "genkit-cli": "^1.20.0",
     "postcss": "^8",
     "prisma": "^6.17.1",
